# Llama-Compiler-2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  config.hpp.in  go.mod  go.sum  grammar.ebnf  input.lla  lexer.hpp  lexer.l  main.cpp  main.go  parser.y  printVisitor.hpp  test  test.cpp  tmp.out  types.hpp
ast/: ast.hpp  forward.hpp
ast/parts/: annotation.hpp  core.hpp  def.hpp  expr.hpp  stmt.hpp  utils-def.hpp  utils-match.hpp  utils_def.hpp  utils_match.hpp
ast/visitor/: visitor.hpp
cli/: CMakeLists.txt  cli.cpp  cli.hpp  frontend.go  root.go
error/: error.cpp  error.hpp
llama-language-support/: CHANGELOG.md  README.md  package.json
llama-language-support/syntaxes/: llama.tmLanguage.json  longRegexes.txt
log/: log.hpp
parse/: scan.go
parser/: CMakeLists.txt  common.hpp  driver.cpp  driver.hpp  generator.cpp  generator.hpp  lexer-utils.cpp  lexer.cpp  lexer.hpp  lexer.l  parser.y  parser.yy  scanner.hpp  scanner.l  source.cpp  source.hpp
parser/recursive-descent/: common.hpp  custom_lexer  custom_lexer.cpp  custom_lexer.hpp  custom_parser.cpp  lexer  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  recursive_descent  test.lla
passes/print/: ast-print.cpp  ast-print.hpp  printVisitor.cpp  printVisitor.hpp
passes/sem/: sem.cpp  sem.hpp
passes/sem/utils/: tables.hpp
src/: cli.rs  lex.rs  lib.rs  long_peekable.rs  longpeekable.rs  main.rs  scan.rs  writer_iter.rs
src/lex/: mod.rs  token.rs
src/parse/: mod.rs
src/parse/ast/: annotation.rs  data_map.rs  def.rs  expr.rs  mod.rs  print.rs
src/pass/: mod.rs
src/pass/sem/: def.rs  expr.rs  inference.rs  mod.rs  sem_table.rs  types.rs
src/pass/sem/types/: inference.rs  mod.rs  type_map.rs
tests/: drafts.cpp  parser_integration.rs  sem_integration.rs
typesystem/: core.cpp  core.hpp  forward.hpp  types.hpp  typesystem.cpp  typesystem.hpp  utils.cpp
typesystem/parts/: types.hpp
utils/: CMakeLists.txt  channel.go  file-io.cpp  gen.go  jobgroup.go  match-as-is.hpp  types.hpp  utils.cpp  utils.hpp
