[package]
name = "llamac"
version = "0.0.1"
edition = "2021"
description = "Compiler for the Llama programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
colored = "2.0.0"
log = "0.4"
env_logger = "0.10.0"
ptree = "0.4"
thiserror = "1.0"