[package]
name = "llamac"
version = "0.0.1"
edition = "2021"
description = "Compiler for the Llama programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.0.0"
log = "0.4"
env_logger = "0.10.0"
ptree = "0.5"
thiserror = "1.0"
enum_dispatch = "0.3.11"
strum = { version = "0.24", features = ["derive"] }
datatest-stable = "0.1.3"

[[test]]
name = "parser_integration"
harness = false

[[test]]
name = "sem_integration"
harness = false
